<resources>
    <string name="app_name">BaseballScore01</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_game_starter">スタメン</string>
    <string name="menu_game_info">試合情報</string>
    <string name="menu_member">選手一覧</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="btn_name_game">試合</string>
    <string name="guide_game_select">試合を選択してください.</string>

    <string name="opt_menu_team_member_append">選手登録</string>
    <string name="opt_menu_team_add_ob">卒団も表示</string>
    <string name="opt_menu_new_game">試合情報登録</string>

    <string name="DLG_TITLE_CONF">確認</string>
    <string name="DLG_TITLE_GAME_SELECT">試合を選択</string>
    <string name="DLG_CONF_YES">はい</string>
    <string name="DLG_CONF_NO">いいえ</string>
    <string name="DLG_ENTRY">登録</string>
    <string name="DLG_UPDATE">更新</string>
    <string name="DLG_DELETE">削除</string>
    <string name="DLG_CLOSE">閉じる</string>

    <string name="SEX_BOY">男子</string>
    <string name="SEX_GIRL">女子</string>

    <string name="GAME_PLAY_TOP">先攻</string>
    <string name="GAME_PLAY_BOTTOM">後攻</string>

    <string-array name="pitching_type_list">
        <item>右投げ</item>
        <item>左投げ</item>
        <item>両投げ</item>
    </string-array>

    <string-array name="batting_type_list">
        <item>右打ち</item>
        <item>左打ち</item>
        <item>両打ち</item>
    </string-array>

    <string-array name="position_category_list">
        <item>外野</item>
        <item>内野</item>
        <item>投手</item>
        <item>捕手</item>
    </string-array>

    <string-array name="team_member_status">
        <item>団員</item>
        <item>卒団</item>
        <item>中退</item>
    </string-array>

    <string name="player_name">選手名</string>

    <!-- 試合情報ダイアログ -->
    <string name="dlg_view_002_game_name">試合名</string>
    <string name="dlg_view_002_game_date">開催日</string>
    <string name="dlg_view_002_game_start_time">開始</string>
    <string name="dlg_view_002_game_end_time">終了</string>
    <string name="dlg_view_002_game_place">場所</string>
    <string name="dlg_view_002_game_competition_team_name">対戦相手</string>
    <string name="dlg_view_002_game_umpire1">主審</string>
    <string name="dlg_view_002_game_umpire2">審判２</string>
    <string name="dlg_view_002_game_umpire3">審判３</string>
    <string name="dlg_view_002_game_umpire4">審判４</string>
    <string name="dlg_view_002_game_umpire5">審判５</string>
    <string name="dlg_view_002_game_umpire6">審判６</string>

    <!-- 選手登録ダイアログ -->
    <string name="dlg_view_001_name1">選手名（姓）</string>
    <string name="dlg_view_001_name2">選手名（名）</string>
    <string name="dlg_view_001_sex">性別</string>
    <string name="dlg_view_001_birthday">誕生日</string>
    <string name="dlg_view_001_position">守</string>
    <string name="dlg_view_001_pitching">投</string>
    <string name="dlg_view_001_batting">打</string>
    <string name="dlg_view_001_status">団員状態</string>

    <!-- ポジション -->
    <string name="GAME_POSITION_TITLE">守備</string>
    <string-array name="game_position_list">
        <item>300,投,投手,1</item>
        <item>400,捕,捕手,2</item>
        <item>100,一,１塁,3</item>
        <item>100,二,２塁,4</item>
        <item>100,三,３塁,5</item>
        <item>200,遊,ショート,6</item>
        <item>200,左,レフト,7</item>
        <item>200,中,センター,8</item>
        <item>200,右,ライト,9</item>
    </string-array>
    <string name="GAME_POSITION_Z">控え</string>

    <!-- 打順 -->
    <string name="BATTING_SEQ">打順</string>
    <string name="BATTING_SEQ_1">１番</string>
    <string name="BATTING_SEQ_2">２番</string>
    <string name="BATTING_SEQ_3">３番</string>
    <string name="BATTING_SEQ_4">４番</string>
    <string name="BATTING_SEQ_5">５番</string>
    <string name="BATTING_SEQ_6">６番</string>
    <string name="BATTING_SEQ_7">７番</string>
    <string name="BATTING_SEQ_8">８番</string>
    <string name="BATTING_SEQ_9">９番</string>

    <!-- メッセージ -->
    <string name="MSG_INP_ERR_001">入力にエラーがあります</string>
    <string name="MSG_INP_ERR_002">【%s】は必須入力です</string>
    <string name="MSG_INP_ERR_003">【%s】を正しく入力して下さい</string>
    <string name="MSG_INP_ERR_101">試合を登録して下さい</string>
    <string name="MSG_INP_ERR_102">試合を選択して下さい</string>
    <string name="MSG_INP_ERR_103">スタメンを設定して下さい</string>

    <string name="MSG_DB_INS_OK">登録しました.</string>
    <string name="MSG_DB_INS_NG">登録に失敗しました.</string>
    <string name="MSG_DB_UPD_OK">更新しました.</string>
    <string name="MSG_DB_UPD_NG">更新に失敗しました.</string>
    <string name="MSG_DB_DLT_OK">【%s】を削除しました.</string>
    <string name="MSG_DB_DLT_NG">【%s】の削除に失敗しました.</string>
    <string name="MSG_CONG_001">登録選手【%s】を削除します.</string>
    <string name="MSG_CONG_002">試合情報【%s】を削除します.</string>

</resources>