<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="jp.yksolution.android.app.baseballscore01.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="jp.yksolution.android.app.baseballscore01.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="jp.yksolution.android.app.baseballscore01.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="jp.yksolution.android.app.baseballscore01.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_game_info"
        android:name="jp.yksolution.android.app.baseballscore01.ui.game.info.GameInfoFragment"
        android:label="@string/menu_game_info"
        tools:layout="@layout/fragment_game_info" />

    <fragment
        android:id="@+id/nav_member"
        android:name="jp.yksolution.android.app.baseballscore01.ui.member.MemberFragment"
        android:label="@string/menu_member"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/nav_share"
        android:name="jp.yksolution.android.app.baseballscore01.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="jp.yksolution.android.app.baseballscore01.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>